# NanoGhost

./: .env.example  .gitignore  LICENSE  README.md  gateway_server.py  nanoghost.bat  pyproject.toml  requirements.txt  run.py
docs/: complete-changelist.md  config.yaml.example  input-pipeline.md  memory-design-v2.md  memory-event-triggers.md  memory-executable-spec.md  memory-final-spec.md  memory-flow-rules-spec.md  memory-hook-architecture-spec.md  memory-multilayer-spec.md  memory-rule-framework.md  memory-system-enhancement-spec.md  memory-system-v3-spec.md  output-pipeline.md  usage.md
prompts/: agent_profile.md  agent_rules_conduct.md
src/agent_core/: __init__.py  agent.py  cli.py  config.py  hooks.py  presenter.py
src/agent_core/adapters/: __init__.py  database.py  http.py  image.py  llm.py
src/agent_core/channel/: __init__.py  base.py  instance.py  interfaces.py  message_context.py  session.py
src/agent_core/engine/: __init__.py  actions.py  agent.py  config.py  config_loader.py  executor.py  feedback.py  hooks.py  messages.py
src/agent_core/interfaces/: __init__.py  database.py  http.py  image.py  llm.py
src/agent_core/mcp/: __init__.py  config.py  http_sse.py  manager.py  stdio_client.py  yaml_subset.py
src/agent_core/memory/: __init__.py  cards.py  classifier.py  embedding.py  graph.py  intent.py  postprocess.py
src/agent_core/skill/: __init__.py  base.py  discovery.py  models.py  registry.py
src/agent_core/tool/: __init__.py  builtins.py  models.py  (+2 more)
tests/: test_basic.py  test_reaction.py  test_reaction_api.py  test_skill_discovery.py
(+11 files in other folders)
