[project]
name = "agent-core"
version = "0.1.0"
description = "Standalone LLM-driven Agent core: decision loop, memory system, Feishu channel"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "json5>=0.9",
    "openai>=1.0",
    "requests>=2.0",
    "python-dotenv>=1.0",
    "fastembed>=0.5",
]

[project.scripts]
nanoghost = "agent_core.cli:main"

[project.optional-dependencies]
feishu = ["lark-oapi>=1.6.0"]
test = ["pytest>=7.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
